--- a/contato.html
+++ b/contato.html
@@ -34,10 +34,8 @@
     <!-- CONTEÚDO -->
     <div id="fundo_degrade">
         <div class="display_flex">
-            <img src="imagens/paulo.jpeg" alt="selfie do desenvolvedor;  rapaz branco de cabelos curtos e escuros vestindo uma camiseta preta" width="300px" id="foto_contato">
+            <img alt="selfie do desenvolvedor;  rapaz branco de cabelos curtos e escuros vestindo uma camiseta preta" width="300px" id="foto_contato">
             <div id="caixa_contato">
-                <h3>Paulo Henrique Silva Tavares</h3><br>
-                <h6>GU3051951</h6>
                 <br>
                 <br>
                 <table>
@@ -47,7 +45,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="https://wa.me/5511970979174" target="_blank">(11) 97097-9174</a></td>
+                        <td>4002-8922</td>
                     </tr>
                     <tr>
                         <td><br><br></td>
@@ -58,7 +56,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="https://www.instagram.com/pauloh_hen" target="_blank">@pauloh_hen</a></td>
+                        <td>@rihanna</td>
                     </tr>
                     <tr>
                         <td><br><br></td>
@@ -69,7 +67,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="mailto:paulo.henriquestav@gmail.com" target="_blank">paulo.henriquestav@gmail.com</a></td>
+                        <td>emaildosilviosantos@gmail.com</td>
                     </tr>
                 </table>
             </div>
